--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="./recipes/sushi.html">Sushi</a>
+  <ul>
+    <li><a href="./recipes/sushi.html">Sushi</a></li>
+    <li><a href="./recipes/pizza.html">Pizza</a></li>
+    <li><a href="./recipes/cheeseburger.html">Cheeseburger</a></li>
+  </ul>
 </body>
 </html>
