--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Pizza</h1>
-  <img src="./img/pizza.jpg" alt="Cheeseburger">
+  <img src="./img/pizza.jpg" alt="Pizza">
   <h2>Homemade Pizza</h2>
   <p>The following method I patched together from recipes in both Joy of Cooking and Cook's Illustrated's The Best Recipe. The pizza dough recipe makes enough dough for two 10 to 12 inch pizzas.</p>
   <h3>Ingredients</h3>
